add some updation on db

--- a/adminapp/templates/adminapp/create_user.html
+++ b/adminapp/templates/adminapp/create_user.html
@@ -1,17 +1,15 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Create New User</title>
+    <title>Create User</title>
 </head>
 <body>
     <h2>Create New User</h2>
-
     {% if messages %}
         {% for message in messages %}
-            <p style="color: green;">{{ message }}</p>
+            <p style="color: red;">{{ message }}</p>
         {% endfor %}
     {% endif %}
-
     <form method="post" enctype="multipart/form-data">
         {% csrf_token %}
         {{ form.as_p }}
