--- a/adminapp/templates/adminapp/list/freezingtariff_list.html
+++ b/adminapp/templates/adminapp/list/freezingtariff_list.html
@@ -7,7 +7,12 @@
 <table border="1">
 <tr><th>ID</th><th>Rate</th><th>Actions</th></tr>
 {% for obj in object_list %}
-<tr><td>{{ obj.id }}</td><td>{{ obj.rate }}</td><td><a href="{% url 'adminapp:freezing_tariff_update' obj.id %}">Edit</a></td></tr>
+<tr><td>{{ obj.id }}</td>
+    <td>{{ obj.rate }}</td>
+    <td><a href="{% url 'adminapp:freezing_tariff_update' obj.id %}">Edit</a></td>
+    <td><a href="{% url 'adminapp:freezing_tariff_delete' obj.id %}">Delete</a></td>
+
+</tr>
 {% endfor %}
 </table>
 </body>
