--- a/adminapp/templates/adminapp/list/item_list.html
+++ b/adminapp/templates/adminapp/list/item_list.html
@@ -1,22 +1,26 @@
-<!-- ItemGrade List Template -->
+<!-- Item List Template -->
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Item Grade List</title>
+    <title>Item List</title>
 </head>
 <body>
-    <h1>Item Grade List</h1>
+    <h1>Item List</h1>
     <table border="1">
         <tr>
             <th>ID</th>
             <th>Name</th>
+            <th>Category</th>
             <th>Actions</th>
         </tr>
         {% for obj in object_list %}
         <tr>
             <td>{{ obj.id }}</td>
             <td>{{ obj.name }}</td>
-            <td><a href="{% url 'adminapp:item_grade_update' obj.id %}">Edit</a></td>
+            <td>{{ obj.category }}</td>
+            <td><a href="{% url 'adminapp:item_update' obj.id %}">Edit</a></td>
+            <td><a href="{% url 'adminapp:item_delete' obj.id %}">Delete</a></td>
+
         </tr>
         {% endfor %}
     </table>
