--- a/adminapp/templates/adminapp/list/peelingcharge_list.html
+++ b/adminapp/templates/adminapp/list/peelingcharge_list.html
@@ -7,7 +7,9 @@
 <table border="1">
 <tr><th>ID</th><th>Charge</th><th>Actions</th></tr>
 {% for obj in object_list %}
-<tr><td>{{ obj.id }}</td><td>{{ obj.charge }}</td><td><a href="{% url 'adminapp:peeling_charge_update' obj.id %}">Edit</a></td></tr>
+<tr><td>{{ obj.id }}</td><td>{{ obj.charge }}</td><td><a href="{% url 'adminapp:peeling_charge_update' obj.id %}">Edit</a></td>
+            <td><a href="{% url 'adminapp:peeling_charge_delete' obj.id %}">Delete</a></td>
+</tr>
 {% endfor %}
 </table>
 </body>
