--- a/adminapp/templates/adminapp/list/purchasingspot_list.html
+++ b/adminapp/templates/adminapp/list/purchasingspot_list.html
@@ -7,7 +7,10 @@
 <table border="1">
 <tr><th>ID</th><th>Name</th><th>Actions</th></tr>
 {% for obj in object_list %}
-<tr><td>{{ obj.id }}</td><td>{{ obj.name }}</td><td><a href="{% url 'adminapp:purchasing_spot_update' obj.id %}">Edit</a></td></tr>
+<tr><td>{{ obj.id }}</td><td>{{ obj.name }}</td>
+    <td><a href="{% url 'adminapp:purchasing_spot_update' obj.id %}">Edit</a></td>
+    <td><a href="{% url 'adminapp:purchasing_spot_delete' obj.id %}">Delete</a></td>
+</tr>
 {% endfor %}
 </table>
 </body>
