major updation for form

--- a/adminapp/templates/adminapp/dashboard.html
+++ b/adminapp/templates/adminapp/dashboard.html
@@ -79,6 +79,16 @@
         <a href="{% url 'adminapp:create_user' %}">Add New User</a>
     </div>
 
+    <div>
+        <h2>spot purchase</h2>
+        <a href="{% url 'adminapp:spot_purchase_add' %}">Add New purchase</a>
+    </div>
+
+    <div>
+        <h2>local purchase</h2>
+        <a href="{% url 'adminapp:local_purchase_create' %}">Add New  local purchase</a>
+    </div>
+
 
     <!-- Operational & Location Masters -->
     <div class="section-title">Operational & Location Masters</div>
