update grade item models

--- a/adminapp/templates/adminapp/purchases/local_purchase_detail.html
+++ b/adminapp/templates/adminapp/purchases/local_purchase_detail.html
@@ -44,7 +44,7 @@
         <td>{{ item.item.name }}</td>
         <td>
             {% if item.grade %}
-                 {{ item.grade.item.name }} {{ item.grade.item.species }} {{ item.grade.grade }} 
+                 {{ item.grade.species }} {{ item.grade.grade }} 
             {% else %}
                 -
             {% endif %}
