update major works

--- a/adminapp/templates/adminapp/dashboard.html
+++ b/adminapp/templates/adminapp/dashboard.html
@@ -91,7 +91,7 @@
 
     <div>
         <h2>spot purchase</h2>
-        <a href="{% url 'adminapp:spot_purchase_add' %}">Add New purchase</a>
+        <a href="{% url 'adminapp:spot_purchase_add' %}">Add New spot purchase</a>
     </div>
 
     <div>
@@ -99,6 +99,7 @@
         <a href="{% url 'adminapp:local_purchase_create' %}">Add New  local purchase</a>
     </div>
 
+ 
 
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
