--- a/adminapp/templates/adminapp/master.html
+++ b/adminapp/templates/adminapp/master.html
@@ -136,6 +136,15 @@
                 </div>
             </div>
         </div>
+        <div class="col">
+            <div class="card module-card">
+                <div class="card-title">Peeling type</div>
+                <div class="btn-group-custom d-flex">
+                    <a href="{% url 'adminapp:item_type_create' %}" class="btn-add flex-fill text-center">Add New</a>
+                    <a href="{% url 'adminapp:item_type_list' %}" class="btn-list flex-fill text-center">View List</a>
+                </div>
+            </div>
+        </div>
     </div>
 
     <!-- Financial & Expense Masters -->
