update major works

--- a/adminapp/templates/adminapp/dashboard.html
+++ b/adminapp/templates/adminapp/dashboard.html
@@ -99,6 +99,13 @@
         <a href="{% url 'adminapp:local_purchase_create' %}">Add New  local purchase</a>
     </div>
 
+
+
+    <div>
+        <h2>peeling shed suply</h2>
+        <a href="{% url 'adminapp:create_peeling_shed_supply' %}">Add peeling shed suply</a>
+    </div>
+
  
 
 
