--- a/adminapp/templates/adminapp/master.html
+++ b/adminapp/templates/adminapp/master.html
@@ -31,7 +31,7 @@
             <div class="card module-card">
                 <div class="card-title">Peeling Center</div>
                 <div class="btn-group-custom d-flex">
-                    <a href="{% url 'adminapp:peeling_center_create' %}" class="btn-add flex-fill text-center">Add New</a>
+                    <a href="{% url 'adminapp:create_shed' %}" class="btn-add flex-fill text-center">Add New</a>
                     <a href="{% url 'adminapp:peeling_center_list' %}" class="btn-list flex-fill text-center">View List</a>
                 </div>
             </div>
@@ -163,8 +163,6 @@
             <div class="card module-card">
                 <div class="card-title">Peeling Charge</div>
                 <div class="btn-group-custom d-flex">
-                    <a href="{% url 'adminapp:peeling_charge_create' %}" class="btn-add flex-fill text-center">Add New</a>
-                    <a href="{% url 'adminapp:peeling_charge_list' %}" class="btn-list flex-fill text-center">View List</a>
                 </div>
             </div>
         </div>
