update freezing for spot

--- a/adminapp/templates/adminapp/dashboard.html
+++ b/adminapp/templates/adminapp/dashboard.html
@@ -106,6 +106,12 @@
         <a href="{% url 'adminapp:create_peeling_shed_supply' %}">Add peeling shed suply</a>
     </div>
 
+
+    <div>
+        <h2>Add Freezing Entry</h2>
+            <a href="{% url 'adminapp:freezing_entry_spot_create' %}">Add Freezing Entry</a>
+    </div>
+
  
 
 
