update local freezing create form

--- a/adminapp/templates/adminapp/dashboard.html
+++ b/adminapp/templates/adminapp/dashboard.html
@@ -108,8 +108,13 @@
 
 
     <div>
-        <h2>Add Freezing Entry</h2>
+        <h2>Add spot Freezing Entry</h2>
             <a href="{% url 'adminapp:freezing_entry_spot_create' %}">Add Freezing Entry</a>
+    </div>
+
+    <div>
+        <h2>Add local Freezing Entry</h2>
+            <a href="{% url 'adminapp:freezing_entry_local_create' %}">Add Freezing Entry</a>
     </div>
 
  
