--- a/adminapp/templates/adminapp/master.html
+++ b/adminapp/templates/adminapp/master.html
@@ -204,6 +204,15 @@
                 </div>
             </div>
         </div>
+        <div class="col">
+            <div class="card module-card">
+                <div class="card-title">Settings</div>
+                <div class="btn-group-custom d-flex">
+                    <a href="{% url 'adminapp:settings_create' %}" class="btn-add flex-fill text-center">Add New</a>
+                    <a href="{% url 'adminapp:settings_list' %}" class="btn-list flex-fill text-center">View List</a>
+                </div>
+            </div>
+        </div>
     </div>
 
     <div class="mt-5 mb-3"></div>
