--- a/adminapp/templates/adminapp/dashboard.html
+++ b/adminapp/templates/adminapp/dashboard.html
@@ -117,6 +117,16 @@
             <a href="{% url 'adminapp:freezing_entry_local_create' %}">Add Freezing Entry</a>
     </div>
 
+    <div>
+        <h2> Freezing Workout </h2>
+            <a href="{% url 'adminapp:freezing_workout' %}"> Freezing Workout </a>
+    </div>
+
+    <div>
+        <h2> pre_shipment_workout_create </h2>
+            <a href="{% url 'adminapp:create_preshipment_workout' %}"> pre_shipment_workout_create </a>
+    </div>
+
  
 
 
