update local freezing detail

--- a/adminapp/templates/adminapp/preshipment_workout_list.html
+++ b/adminapp/templates/adminapp/preshipment_workout_list.html
@@ -25,6 +25,7 @@
             <td>{{ workout.created_at|date:"Y-m-d" }}</td>
             <td>
                 <a href="{% url 'adminapp:preshipment_workout_delete' workout.id %}" class="btn btn-danger btn-sm">Delete</a>
+                <a href="{% url 'adminapp:preshipment_workout_detail' workout.id %}" class="btn btn-danger btn-sm">Detail</a>
             </td>
         </tr>
     {% empty %}
